--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -500,8 +500,8 @@
       </thead>
       <tbody style="background: none !important;">
         <tr>
-        <td style="" droppable ng-repeat="opportunitystage in opportunitiesbysatges" ng-drop="updateOpportunityStage(opportunitystage)">
-          <div draggable  ng-repeat="opportunity in opportunitystage.items|filter:{current_stage.name:opportunitystage.name}"  ng-class="{selectedCard: isSelectedCard(opportunity)}" droppable id="card_<%=$index%>" class="cardElement cusCardElement" ng-drop="dropTag(opportunity,-1)" style="  width:100%;margin-right: 0px;position:relative;margin-bottom:5px;" ng-drag="selectedOpp(opportunity,opportunitystage)">
+        <td droppable ng-repeat="opportunitystage in opportunitiesbysatges" ng-drop="updateOpportunityStage(opportunitystage)" id="stage_<%=$index%>">
+          <div draggable  ng-repeat="opportunity in opportunitystage.items|filter:{current_stage.name:opportunitystage.name}"  ng-class="{selectedCard: isSelectedCard(opportunity)}" droppable id="card_<%=$index%>" class="cardElement cusCardElement testStage" ng-drop="dropTag(opportunity,-1)" style="  width:100%;margin-right: 0px;position:relative;margin-bottom:5px;" ng-drag="selectedOpp(opportunity,opportunitystage)">
             <div class="btn-group cusOptionsBtn dropup">
               <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
                <i class="fa fa-ellipsis-vertical"></i>
