records mergings bug, setting at signup, calendar start date
Former-commit-id: 17de60e9f29dba066d916004e73b535f16ee0903 [formerly b7b058560a5f24f7379cacf5c67e6f3e635cef89] [formerly 48cd493a3fd20af537fd31950c65b3950d70ccb0 [formerly 6c30fd87a6c1ba466fe0b00ce536899f12cbdddf]]
Former-commit-id: e4990fda0a751d7ad847929a255ccecd0e29e001 [formerly 57d35954cfbce5162e0053fcf48e66e462323580]
Former-commit-id: 421ac53754fc35535dd30611e54ddfd7a2236a54

--- a/templates/admin/regional/regional_edit.html
+++ b/templates/admin/regional/regional_edit.html
@@ -579,7 +579,7 @@
             <div class="col-md-12" style="padding: 0px;"><i class="fa fa-calendar-o"></i> Week starts on</div>
             <div class="col-md-5  " style="padding: 0px">
                 <select name="" id="week_start" class="form-control select2 no-icon">
-                    <option value="saturday">Saturday</option>
+                    <!--<option value="saturday">Saturday</option>-->
                     <option value="sunday">Sunday</option>
                     <option value="monday">Monday</option>
                 </select>
