updgrade language of setting (Portuguese/Brazil, french)
Former-commit-id: 0b1bff7efa402881e6822f2e7b11414f6eee8a88 [formerly b575bb7575e47069b9cb481ae35b1e825da027ac] [formerly 11ad79f0f953db701187f23ea34b3b97d889bcba [formerly b8e2f5e1c8ad896ef9c5551d7a987bb6837284fc]]
Former-commit-id: 857ce023878c6637e374152089eb642a940871e2 [formerly 6f043727a2d82ab10995d57d188af6abbf75a052]
Former-commit-id: 8be5795010d94b1a1237ef5f12c66b8de0d76724

--- a/templates/admin/case_status/case_status_edit.html
+++ b/templates/admin/case_status/case_status_edit.html
@@ -1,7 +1,7 @@
 <div class="row subHeader action-bar">
     <div class="currentApp">
         <a class="filterItem" href="#" data-toggle="dropdown">
-            <span class="active-app"><i class="fa fa-cog"></i> Settings</span> <!--{{_(active_app.label)}}-->
+            <span class="active-app"><i class="fa fa-cog"></i> {{_(active_app.label)}}</span>
             <i class="icon-angle-down fa fa-angle-down"></i>
         </a>
         <ul class="dropdown-menu">
@@ -15,7 +15,7 @@
             <i class="fa fa-trash-o"></i>
         </a>
         <div class="col-md-4 active-app"><i class="fa fa-user section-icon"></i>
-            Cases Status Settings
+            {{ _('Cases Status Settings') }}
         </div>
         <a class="btn red save-btn pull-right" href="" ng-click="addCasestatustModal()">
             <i class="fa fa-plus"></i> {{ _('New') }}
