--- a/templates/admin/email_signature/email_signature_edit.html
+++ b/templates/admin/email_signature/email_signature_edit.html
@@ -1,7 +1,7 @@
 <div class="row subHeader action-bar">
     <div class="currentApp">
         <a class="filterItem" href="#" data-toggle="dropdown">
-            <span class="active-app"><i class="fa fa-cog"></i> Settings</span> <!--{{_(active_app.label)}}-->
+            <span class="active-app"><i class="fa fa-cog"></i> {{_(active_app.label)}} </span>
             <i class="icon-angle-down fa fa-angle-down"></i>
         </a>
         <ul class="dropdown-menu">
@@ -12,7 +12,7 @@
     </div>
     <div class="subHeaderContent" style="border-right-width: 0px;">
         <div class="col-md-4 active-app"><i class="fa fa-envelope section-icon"></i>
-            Email Signature
+            {{ _('Email Signature') }}
         </div>
         <a class="btn red save-btn pull-right" id="customButton" ng-click="addSignature()">
             <i class="fa fa-floppy-o"></i> {{_("Save")}}
@@ -38,13 +38,13 @@
         <div class="col-md-8 col-md-offset-2 panel panel-primary">
 
             <div class="modal-body">
-                <h3 style="display: inline">Signature</h3>
+                <h3 style="display: inline">{{ _('Signature')}} </h3>
                 <i class="material-icons" style="font-size: 19px">edit</i>
 
-                <p> This signature will appear in all mail you send from iogrow <br> You've connected ioGrow to <b>
-                    {{user.email}}</b>
+                <p> {{ _('This signature will appear in all mail you send from iogrow') }} <br>
+                    {{ _("You've connected ioGrow to") }} <b> {{user.email}}</b>
                     .</p>
-                <p><b>Signature</b></p>
+                <p><b>{{ _('Signature')}}</b></p>
                 <form class="ng-pristine ng-invalid ng-invalid-required">
                     <div class="form-group text-form-group">
                         <textarea id="signature_textarea" placeholder="{{_('Enter text ...')}}" class="form-control"
