--- a/templates/admin/lead_status/lead_status_edit.html
+++ b/templates/admin/lead_status/lead_status_edit.html
@@ -1,7 +1,7 @@
 <div class="row subHeader action-bar">
     <div class="currentApp">
         <a class="filterItem" href="#" data-toggle="dropdown">
-            <span class="active-app"><i class="fa fa-cog"></i> Settings</span> <!--{{_(active_app.label)}}-->
+            <span class="active-app"><i class="fa fa-cog"></i> {{_(active_app.label)}}</span>
             <i class="icon-angle-down fa fa-angle-down"></i>
         </a>
         <ul class="dropdown-menu">
@@ -12,7 +12,7 @@
     </div>
     <div class="subHeaderContent" style="border-right-width: 0px;">
         <div class="col-md-4 active-app"><i class="fa fa-user section-icon"></i>
-            Leads Status Settings
+            {{ _('Leads Status Settings') }}
         </div>
         <!--<pre><%= nbrSelected %></pre>-->
         <a class="btn" ng-show="nbrSelected > 1" ng-click="deleteSelected()">
