updgrade language of setting (arabic)
Former-commit-id: 96b0ed5389401d4c2c80131230aa1f411d04f041 [formerly 5181994b44b4dc09220cdcbc8873863ed872b5df] [formerly 680a78d5089e65896546d67563b5fedb9c21a3c2 [formerly 5142a43b4878aaebd6460b394bd5149594a4c1d5]]
Former-commit-id: c6ef8ad078dfa94372aacee93b34d60bc06afa40 [formerly 8ec2bb0746d1e6d67edea153cbaaf74fef1e978c]
Former-commit-id: 4d3d626e2c54fcad9836f976fb7989bb2d967a55

--- a/templates/admin/custom_fields/custom_fields_edit.html
+++ b/templates/admin/custom_fields/custom_fields_edit.html
@@ -778,7 +778,7 @@
                                 <div class="clearfix"></div>
                                 <p ng-show="isEmptyArray(contacts.customfields)"
                                    style="padding: 15px;font-size: 16px;text-align: center;">
-                                    <span>Empty</span>
+                                    <span>{{ _('Empty') }} </span>
                                 </p>
                             </div>
 
