--- a/templates/admin/opportunity/opportunity_edit.html
+++ b/templates/admin/opportunity/opportunity_edit.html
@@ -99,8 +99,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                    <button type="submit" class="btn green" ng-click="saveOppStage(oppstage)">{{_("Add a new Opportunity
-                        stage")}}
+                    <button type="submit" class="btn green" ng-click="saveOppStage(oppstage)">{{_("Add a new Opportunity stage")}}
                     </button>
                 </div>
             <!--</form>-->
