--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -656,7 +656,7 @@
   
   <div class="row">
   <div class="col-md-12">
-        <div class="portlet showCard">
+        <div class="portlet showCard customPortlet">
           <div class="portlet-title">
             <div class="caption">
                 <!-- class="fa fa-reorder"--><i class="fa fa-tags" style="font-size: 16px;"></i>{{_('Tags')}}
