--- a/templates/base.html
+++ b/templates/base.html
@@ -432,8 +432,8 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
     //  }
     //  var ROOT = getRoot();
 
-   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-  //  var ROOT = '/_ah/api';
+    //  var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    var ROOT = '/_ah/api';
 
 
 
@@ -503,14 +503,21 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
             }
         },
         renderIfUpdated: function (key, newData, callback) {
+            console.log("in render ifUpadte");
             if (typeof(Storage) != "undefined") {
+                console.log("localStorage exists");
                 var existingData = localStorage[key];
+                // console.log(existingData);
                 var stringifyNewData = JSON.stringify(newData);
+                //console.log(stringifyNewData);
+                console.log(stringifyNewData.length)
+                // console.log(existingData.length)
                 if (typeof(existingData) === 'undefined') {
-                    console.log('new new');
+                    console.log('new data detected **************************************');
                     this.write(key, newData);
                     callback(newData);
                 } else if ((existingData.length != stringifyNewData.length) || (existingData === '{}')) {
+                    console.log("write the new data");
                     console.log('new new');
                     this.write(key, newData);
                     callback(newData);
@@ -518,8 +525,7 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
             }
             
         }
-    };
-
+};
 </script>
 <script src="https://apis.google.com/js/client.js?onload=loadGapi">
 </script>
@@ -533,7 +539,7 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
         try {
 
             var logoPan = document.getElementById("update_logo_pan");
-            logoPan.style.display = "inline"
+            logoPan.style.display = "inline";
         }
         catch (e) {
         }
