--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -758,7 +758,7 @@
       <div class="fixed-labelsCard visible-md visible-lg">
       <div class="row">
       <div class="col-md-12">
-        <div class="portlet showCard">
+        <div class="portlet showCard customPortlet">
           <div class="portlet-title">
             <div class="caption">
                 <!-- class="fa fa-reorder"--><i class="fa fa-tags" style="font-size: 16px;"></i>{{_('Tags')}}
