fixing bug on blankstate and filterNoResult on all objects except opportunity.list
Former-commit-id: df73008282d4d3dc5228a90b50fbadb2aafaa4a6 [formerly 854bfb16d8ef2012f67dc387d729ef702bd7ddee] [formerly dd5ae989d56369ff8837bc60d9d1bf5b7bf5f2b4 [formerly 6f492f592ad7a664aa740268e6419671338a6b54]]
Former-commit-id: 48068af1850fcd57b1848ee0a145d067c0747040 [formerly 64e40cbc0ce25461d6f1fb752a76bfee0afa391f]
Former-commit-id: f4cc5c5222e18ebd74a6d6a6c31c0c15e414304e

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -476,7 +476,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" id="contactCardsContainer" style="min-height: 0px !important;margin-top: -12px;">
+        <div class="col-md-12 waterfall" ng-show="show=='cards'&&!blankStatecontact&&!filterNoResult" id="contactCardsContainer" style="min-height: 0px !important;margin-top: -12px;">
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
