--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -492,7 +492,7 @@
                  </div>
             </div>
         </div>
-        <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" id="accountCardsContainer" style="margin-top: -10px;">
+        <div class="col-md-12 waterfall" ng-show="show=='cards'&&!blankStateaccount" id="accountCardsContainer" style="margin-top: -10px;">
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
