--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -359,7 +359,7 @@
                 </div>
             </div>
         </div>
-            <div class="col-md-12 waterfall" ng-hide="blankStatelead || filterNoResult" ng-show="show=='cards'" id="leadCardsContainer" style="
+            <div class="col-md-12 waterfall" ng-show="show=='cards'&&!blankStatelead&&!filterNoResult" id="leadCardsContainer" style="
             margin-top: -10px;"> 
               <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
                     <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
