change filter by contacts by filter by accounts in account.list
Former-commit-id: 77e07b2c9bfae28d9531f5c88de4852bef9237e0 [formerly e64432c1779f792045a54c84225ed6ce23b67068] [formerly ccecbbda8c1594c4172a1ac1db4c05967af45145 [formerly aef4f89bf5b151a6d89b4c694a5887c454233a00]]
Former-commit-id: 5285ad1798d314f69022953fd85d260040ccd4e9 [formerly 3feb42e6ef9588e5837510ee01211ab873ee2b9b]
Former-commit-id: 9c01af05d111b4b1e085955c6aa0fc127aed4ff4

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -123,10 +123,10 @@
                   <ul class="dropdown-menu drp-dwn-right">
                     <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Filter by")}}</li>
                       <li class="ng-menu">                        
-                        <a ng-click="accountFilterBy('all');"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': accountsfilter == 'all'}"></i>All contacts</a>
+                        <a ng-click="accountFilterBy('all');"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': accountsfilter == 'all'}"></i>All accounts</a>
                     </li>
                     <li class="ng-menu">
-                        <a ng-click="accountFilterBy('my','{{ME}}');"> <i class="checkFilterMenu fa" ng-class="{'fa-check': accountsfilter == 'my'}"></i>My contacts</a>
+                        <a ng-click="accountFilterBy('my','{{ME}}');"> <i class="checkFilterMenu fa" ng-class="{'fa-check': accountsfilter == 'my'}"></i>My accounts</a>
                     </li>
                     <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Order by")}}</li>
                      <li class="ng-menu">                      
