correct the bug of ng-enter of email in account, contact, lead new pages
Former-commit-id: 7ee4bc6e27a0b3664ac8bc44e3d183f2744dcce7 [formerly 81143ca50186bad6ab16ec04315b1e8a233d4d3f] [formerly f3d8d6e517124a27026837bf5919d0b81ae2f9bb [formerly ba428777346221922213fe884272f1d7ba948584]]
Former-commit-id: 7aff4b216b5b05b2f0c5a11076e369b8fd33ca27 [formerly 069634392ccd57c2a0ba687ea1169af7d93d5b53]
Former-commit-id: 8d428592c7bbd245a26aed6034f209e9aa34c9a2

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -240,7 +240,7 @@
                                                 <div class="input-icon  margin-top-10">
                                                     <i class="fa fa-envelope"></i>
                                                     <input ng-blur="pushElement(email,emails,'emails')"
-                                                           ng-enter="pushElement(pushElement(email,emails,'emails')"
+                                                           ng-enter="pushElement(email,emails,'emails')"
                                                            type="email" class="form-control" ng-model="email.email"
                                                            placeholder="{{_('Add an email')}}">
                                                 </div>
